--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div style="color: #2dcece">
                  <i class="fas fa-spinner fa-pulse fa-3x"></i>
                 </div>
-                <img id="airplane" src="assets/images/airplane.png" alt="airplane">
+                <!-- <img id="airplane" src="assets/images/airplane.png" alt="airplane"> -->
                 
             </div>
         </div>
